--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "require": {
     },
     "require-dev": {
-        "orchestra/testbench": "~3.0"
+        "orchestra/testbench": "~3.0",
+        "phpunit/phpunit": "^7.0"
     },
     "autoload": {
         "psr-4": {
