Update Travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,4 +16,4 @@ before_script:
   - travis_retry composer update ${COMPOSER_FLAGS} --no-interaction
 
 script:
-  - vendor/bin/phpunit --coverage-text --coverage-clover=coverage.xml
+  - vendor/bin/phpunit
