--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "require": {
     },
     "require-dev": {
-        "orchestra/testbench": "~3.0",
+        "orchestra/testbench": "^3.6",
         "phpunit/phpunit": "^7.0",
         "mockery/mockery": "^1.0.0"
     },
