update travis configuration

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,4 +15,4 @@ before_script:
   - travis_retry composer update ${COMPOSER_FLAGS} --no-interaction
 
 script:
-  - phpunit
+  - ./vendor/bin/phpunit
