--- a/scrutinizer.yml
+++ b/scrutinizer.yml
@@ -14,6 +14,10 @@ build:
     nodes:
         analysis:
             tests:
+                before: 
+                    # This file is only used on certain Laravel versions and references a dependency which doesn't exist
+                    # on others. Removing this prevents code coverage in phpunit from failing
+                    - 'rm ./src/InterfaceDatabaseLoader.php'
                 override:
                     - php-scrutinizer-run
                     -
