--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "laravel-mix": "^2.1.14",
+    "laravel-mix": "^4.0.15",
     "postcss": "^7.0.2",
-    "tailwindcss": "^0.6.5"
+    "tailwindcss": "^0.6.5",
+    "vue-template-compiler": "^2.6.10"
   },
   "dependencies": {
     "axios": "^0.18",
