--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,10 @@
             "email": "hello@joedixon.co.uk"
         }
     ],
-    "require": {},
+    "require": {
+        "php": "^7.2|^7.3|^7.4",
+        "illuminate/support": "^6.0|^7.0"
+    },
     "require-dev": {
         "orchestra/testbench": "^4.0",
         "phpunit/phpunit": "^8.0",
