--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,13 @@
         }
     ],
     "require": {
-        "php": "^7.2|^7.3|^7.4",
-        "illuminate/support": "^6.0|^7.0"
+        "php": "^8.0",
+        "illuminate/support": "^8.0",
+        "laravel/legacy-factories": "^1.3"
     },
     "require-dev": {
-        "orchestra/testbench": "^4.0",
-        "phpunit/phpunit": "^8.0",
+        "orchestra/testbench": "^6.0",
+        "phpunit/phpunit": "^9.0",
         "mockery/mockery": "^1.0.0"
     },
     "autoload": {
